--- a/zanzibar.html
+++ b/zanzibar.html
@@ -37,7 +37,7 @@
         <a href="https://it.wikipedia.org/wiki/Zanzibar" target="_blank" rel="noopener noreferrer">
              ➡️ Pagina Wikipedia
         </a>
-        <a href="https://www.google.com/maps/place/Zanzibar" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.google.com/maps/place/Zanzibar+Tanzania" target="_blank" rel="noopener noreferrer">
              📍 Posizione su Maps
         </a>
     </div>
@@ -46,4 +46,5 @@
     <p>© 2025 Travel Planner</p>
   </footer>
 </body>
+
 </html>
