--- a/zanzibar.html
+++ b/zanzibar.html
@@ -1,7 +1,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Thailandia</title>
+  <title>Zanzibar</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,15 +23,27 @@
     </nav>
   </header>
   <main>
-    <h2>Thailandia</h2>
-    <img src="img/thailandia.jpg" alt="Thailandia">
-    <strong><a>🏝️Thailandia</a></strong>: Ideale per chi cerca cultura, spiagge vivaci, mercati notturni e street food. Prezzi accessibili e tante attività tra cui immersioni e tour nelle isole vicine.
-           <li><strong>🎾Attività:</strong> escursioni in barca, massaggi tradizionali, visite ai templi buddisti</li>
-          <li><strong>🍳Cibo tipico:</strong> Pad Thai, curry verde, mango con riso appiccicoso</li>
-          <li><strong>⭐Luoghi iconici:</strong> Grande Buddha, spiaggia di Patong, Phi Phi Islands</li>
+    <h2>Zanzibar 🌶️</h2>
+    <img src="img/zanzibar.jpg" alt="Spiaggia e barca a vela a Zanzibar">
+    <div class="destination-info">
+        <strong>🏝️ Zanzibar: L'Isola delle Spezie e della Storia Swahili</strong>: Conosciuta come l'Isola delle Spezie, Zanzibar è una gemma al largo della costa della Tanzania ricca di storia, in particolare a **Stone Town**, un sito Patrimonio Mondiale dell'UNESCO dove si fondono influenze africane, arabe, indiane ed europee. Oltre alle sue spiagge paradisiache e al mare ideale per il kitesurf, l'isola invita all'esplorazione delle famose **piantagioni di spezie** e offre un assaggio autentico della cultura Swahili, perfetta per chi cerca storia, avventura e relax balneare in un'unica vacanza.
+        <ul>
+           <li><strong>🎾 Attività:</strong> Spice Tour, esplorazione di Stone Town, immersioni, safari blu</li>
+          <li><strong>🍳 Cibo tipico:</strong> Ubri (curry di riso al cocco), Pilaus, frutti di mare e spezie fresche</li>
+          <li><strong>⭐ Luoghi iconici:</strong> Stone Town, Prison Island, spiagge di Nungwi</li>
+        </ul>
+    </div>
+    <div class="extra-links">
+        <a href="https://it.wikipedia.org/wiki/Zanzibar" target="_blank" rel="noopener noreferrer">
+             ➡️ Pagina Wikipedia
+        </a>
+        <a href="https://www.google.com/maps/place/Zanzibar+Tanzania" target="_blank" rel="noopener noreferrer">
+             📍 Posizione su Maps
+        </a>
+    </div>
   </main>
   <footer>
-    <p>&copy; 2025 Travel Planner</p>
+    <p>© 2025 Travel Planner</p>
   </footer>
 </body>
 </html>
