--- a/caraibi.html
+++ b/caraibi.html
@@ -26,7 +26,7 @@
     <h2>Caraibi 🍹</h2>
     <img src="img/caraibi.jpg" alt="Spiaggia caraibica">
     <div class="destination-info">
-        <strong>🏝️ Caraibi: Ritmo, Sabbia e Sole</strong>: Il vasto Mar dei Caraibi è un mosaico di migliaia di isole, ognuna con un carattere distintivo, ma tutte accomunate da un'acqua di una trasparenza irreale e da spiagge di sabbia finissima. Dai ritmi inebrianti del Reggae in Giamaica, all'eleganza coloniale di Barbados, fino alle **barriere coralline mozzafiato**, i Caraibi offrono un'esperienza versatile che spazia dal lusso all-inclusive al più autentico ecoturismo e sono la scelta ideale per una fuga tropicale con un tocco di esuberanza culturale.
+        <strong>🏝️ Caraibi: Ritmo, Sabbia e Sole</strong> Il vasto Mar dei Caraibi è un mosaico di migliaia di isole, ognuna con un carattere distintivo, ma tutte accomunate da un'acqua di una trasparenza irreale e da spiagge di sabbia finissima. Dai ritmi inebrianti del Reggae in Giamaica, all'eleganza coloniale di Barbados, fino alle barriere coralline mozzafiato, i Caraibi offrono un'esperienza versatile che spazia dal lusso all-inclusive al più autentico ecoturismo e sono la scelta ideale per una fuga tropicale con un tocco di esuberanza culturale.
         <ul>
           <li><strong>🎾 Attività:</strong> crociere, immersioni nei reef corallini, tour in catamarano</li>
           <li><strong>🍳 Cibo tipico:</strong> jerk chicken, riso e piselli, frutti di mare speziati</li>
@@ -46,4 +46,5 @@
     <p>© 2025 Travel Planner</p>
   </footer>
 </body>
+
 </html>
