--- a/bali.html
+++ b/bali.html
@@ -26,7 +26,7 @@
     <h2>Bali 🕉️</h2>
     <img src="img/bali.jpg" alt="Risaie di Bali">
     <div class="destination-info">
-        <strong>🏝️ Bali: L'Isola degli Dei</strong>: Bali è una destinazione magnetica in Indonesia, celebrata a livello mondiale per la sua profonda cultura induista, i **templi magnifici arroccati su scogliere a picco**, le vaste e lussureggianti terrazze di riso verde smeraldo e l'atmosfera pervasa di spiritualità che la rende il luogo ideale per ritiri yoga e meditazione. È un paradiso tropicale che combina spiagge perfette per il surf, vulcani maestosi e una vivace scena artistica e culinaria.
+        <strong>🏝️ Bali: L'Isola degli Dei</strong> Bali è una destinazione magnetica in Indonesia, celebrata a livello mondiale per la sua profonda cultura induista, i **templi magnifici arroccati su scogliere a picco**, le vaste e lussureggianti terrazze di riso verde smeraldo e l'atmosfera pervasa di spiritualità che la rende il luogo ideale per ritiri yoga e meditazione. È un paradiso tropicale che combina spiagge perfette per il surf, vulcani maestosi e una vivace scena artistica e culinaria.
         <ul>
           <li><strong>🎾 Attività:</strong> meditazione, surf, visite ai templi, escursioni nelle risaie</li>
           <li><strong>🍳 Cibo tipico:</strong> nasi goreng, sate, babi guling</li>
@@ -46,4 +46,5 @@
     <p>© 2025 Travel Planner</p>
   </footer>
 </body>
+
 </html>
