--- a/polinesia.html
+++ b/polinesia.html
@@ -26,7 +26,7 @@
     <h2>Polinesia Francese 🌺</h2>
     <img src="img/polinesia.jpg" alt="Bungalow sull'acqua in Polinesia">
     <div class="destination-info">
-        <strong>🏝️ Polinesia Francese: L'Ultimo Eden del Pacifico</strong>: La Polinesia Francese, incastonata nel cuore del Pacifico, è un sogno di viaggio che include isole leggendarie come Bora Bora, Moorea e Tahiti. È la quintessenza dell'**esclusività e del paesaggio da cartolina**, con imponenti montagne vulcaniche verdeggianti che si tuffano in lagune color smeraldo, protette da barriere coralline. Offre un'esperienza di lusso indimenticabile, snorkeling spettacolare e l'abbraccio caloroso della cultura Ma'ohi.
+        <strong>🏝️ Polinesia Francese: L'Ultimo Eden del Pacifico</strong> La Polinesia Francese, incastonata nel cuore del Pacifico, è un sogno di viaggio che include isole leggendarie come Bora Bora, Moorea e Tahiti. È la quintessenza dell'**esclusività e del paesaggio da cartolina**, con imponenti montagne vulcaniche verdeggianti che si tuffano in lagune color smeraldo, protette da barriere coralline. Offre un'esperienza di lusso indimenticabile, snorkeling spettacolare e l'abbraccio caloroso della cultura Ma'ohi.
         <ul>
           <li><strong>🎾 Attività:</strong> immersioni con mante, crociere al tramonto, danze polinesiane</li>
           <li><strong>🍳 Cibo tipico:</strong> poisson cru (pesce crudo con cocco), frutti tropicali</li>
@@ -46,4 +46,5 @@
     <p>© 2025 Travel Planner</p>
   </footer>
 </body>
+
 </html>
