--- a/zanzibar.html
+++ b/zanzibar.html
@@ -26,7 +26,7 @@
     <h2>Zanzibar 🌶️</h2>
     <img src="img/zanzibar.jpg" alt="Spiaggia e barca a vela a Zanzibar">
     <div class="destination-info">
-        <strong>🏝️ Zanzibar: L'Isola delle Spezie e della Storia Swahili</strong> Conosciuta come l'Isola delle Spezie, Zanzibar è una gemma al largo della costa della Tanzania ricca di storia, in particolare a **Stone Town**, un sito Patrimonio Mondiale dell'UNESCO dove si fondono influenze africane, arabe, indiane ed europee. Oltre alle sue spiagge paradisiache e al mare ideale per il kitesurf, l'isola invita all'esplorazione delle famose **piantagioni di spezie** e offre un assaggio autentico della cultura Swahili, perfetta per chi cerca storia, avventura e relax balneare in un'unica vacanza.
+        <strong>🏝️ Zanzibar: L'Isola delle Spezie e della Storia Swahili</strong> Conosciuta come l'Isola delle Spezie, Zanzibar è una gemma al largo della costa della Tanzania ricca di storia, in particolare a Stone Town, un sito Patrimonio Mondiale dell'UNESCO dove si fondono influenze africane, arabe, indiane ed europee. Oltre alle sue spiagge paradisiache e al mare ideale per il kitesurf, l'isola invita all'esplorazione delle famose piantagioni di spezie e offre un assaggio autentico della cultura Swahili, perfetta per chi cerca storia, avventura e relax balneare in un'unica vacanza.
         <ul>
            <li><strong>🎾 Attività:</strong> Spice Tour, esplorazione di Stone Town, immersioni, safari blu</li>
           <li><strong>🍳 Cibo tipico:</strong> Ubri (curry di riso al cocco), Pilaus, frutti di mare e spezie fresche</li>
@@ -48,3 +48,4 @@
 </body>
 
 </html>
+
