--- a/thailandia.html
+++ b/thailandia.html
@@ -26,7 +26,7 @@
     <h2>Thailandia 🐘</h2>
     <img src="img/thailandia.jpg" alt="Spiaggia e barca in Thailandia">
     <div class="destination-info">
-        <strong>🏝️ Thailandia: Il Regno del Sorriso e dei Contrasti</strong> La Thailandia è un regno di contrasti affascinanti, unendo la spiritualità dei suoi **maestosi templi buddisti** e la frenesia delle metropoli come Bangkok, alla serenità delle sue isole meridionali. Il "Paese del Sorriso" offre un'esperienza incredibilmente ricca e accessibile, famosa per il suo delizioso **street food**, l'ospitalità e le spettacolari formazioni calcaree che emergono dal mare, come a Krabi. È ideale per backpacker, famiglie e chi cerca un mix di cultura, spiagge e avventura accessibile.
+        <strong>🏝️ Thailandia: Il Regno del Sorriso e dei Contrasti</strong> La Thailandia è un regno di contrasti affascinanti, unendo la spiritualità dei suoi maestosi templi buddisti e la frenesia delle metropoli come Bangkok, alla serenità delle sue isole meridionali. Il "Paese del Sorriso" offre un'esperienza incredibilmente ricca e accessibile, famosa per il suo delizioso street food, l'ospitalità e le spettacolari formazioni calcaree che emergono dal mare, come a Krabi. È ideale per backpacker, famiglie e chi cerca un mix di cultura, spiagge e avventura accessibile.
         <ul>
            <li><strong>🎾 Attività:</strong> escursioni in barca, massaggi tradizionali, visite ai templi buddisti</li>
           <li><strong>🍳 Cibo tipico:</strong> Pad Thai, curry verde, mango con riso appiccicoso</li>
@@ -48,3 +48,4 @@
 </body>
 
 </html>
+
