--- a/seychelles.html
+++ b/seychelles.html
@@ -26,7 +26,7 @@
     <h2>Seychelles 🏝️</h2>
     <img src="img/seychelles.jpg" alt="Spiaggia delle Seychelles con rocce granitiche">
     <div class="destination-info">
-        <strong>🏝️ Seychelles: Giganti di Granito e Natura Incontaminata</strong> Le Seychelles, nell'Oceano Indiano, si distinguono per le loro **imponenti formazioni rocciose di granito** che creano un contrasto spettacolare con le spiagge di sabbia bianca e le acque turchesi. Questo arcipelago offre una natura incontaminata, con la possibilità di avvistare tartarughe giganti e la rarissima palma Coco de Mer nella Vallée de Mai. È una destinazione che garantisce tranquillità, eleganza discreta e una bellezza paesaggistica di rara unicità e selvaggia.
+        <strong>🏝️ Seychelles: Giganti di Granito e Natura Incontaminata</strong> Le Seychelles, nell'Oceano Indiano, si distinguono per le loro imponenti formazioni rocciose di granito che creano un contrasto spettacolare con le spiagge di sabbia bianca e le acque turchesi. Questo arcipelago offre una natura incontaminata, con la possibilità di avvistare tartarughe giganti e la rarissima palma Coco de Mer nella Vallée de Mai. È una destinazione che garantisce tranquillità, eleganza discreta e una bellezza paesaggistica di rara unicità e selvaggia.
         <ul>
           <li><strong>🎾 Attività:</strong> trekking in riserve naturali, snorkeling, pesca d'altura</li>
           <li><strong>🍳 Cibo tipico:</strong> curry di pesce, chutney di mango, frutti di mare</li>
@@ -48,3 +48,4 @@
 </body>
 
 </html>
+
