--- a/maldive.html
+++ b/maldive.html
@@ -26,7 +26,7 @@
     <h2>Maldive 🐠</h2>
     <img src="img/maldive.jpg" alt="Resort sull'acqua alle Maldive">
     <div class="destination-info">
-        <strong>🏝️ Maldive: Il Paradiso in Mezzo all'Oceano Indiano</strong> Questa nazione di atolli corallini è l'epitome del **lusso tropicale e del romanticismo assoluto**. Famoso per le sue ville su palafitte che si affacciano su lagune turchesi, l'esperienza maldiviana è incentrata sul relax assoluto e sull'esplorazione della vita marina. Le acque cristalline offrono condizioni impareggiabili per lo **snorkeling e le immersioni**, permettendo di nuotare con squali balena, mante e tartarughe in un santuario di biodiversità marina, rendendola perfetta per viaggi di nozze o fughe esclusive.
+        <strong>🏝️ Maldive: Il Paradiso in Mezzo all'Oceano Indiano</strong> Questa nazione di atolli corallini è l'epitome del lusso tropicale e del romanticismo assoluto. Famoso per le sue ville su palafitte che si affacciano su lagune turchesi, l'esperienza maldiviana è incentrata sul relax assoluto e sull'esplorazione della vita marina. Le acque cristalline offrono condizioni impareggiabili per lo snorkeling e le immersioni, permettendo di nuotare con squali balena, mante e tartarughe in un santuario di biodiversità marina, rendendola perfetta per viaggi di nozze o fughe esclusive.
         <ul>
           <li><strong>🎾 Attività:</strong> immersioni, snorkeling, crociere in dhoni, spa</li>
           <li><strong>🍳 Cibo tipico:</strong> curry di pesce, mas huni (tonno con cocco), roshi (pane piatto)</li>
@@ -48,3 +48,4 @@
 </body>
 
 </html>
+
