--- a/hawaii.html
+++ b/hawaii.html
@@ -26,7 +26,7 @@
     <h2>Hawaii 🌋</h2>
     <img src="img/hawaii.jpg" alt="Paesaggio vulcanico delle Hawaii">
     <div class="destination-info">
-        <strong>🏝️ Hawaii: L'Aloha Spirit e le Isole Vulcaniche</strong> L'arcipelago delle Hawaii, il 50° stato degli USA, è la culla dell'Aloha Spirit. Queste isole vulcaniche sono un capolavoro della natura, dove si possono esplorare vulcani attivi e dormienti come il Kilauea, fare surf sulle onde leggendarie di Waikiki e percorrere sentieri escursionistici che si aprono su **panorami costieri drammatici**, come la Na Pali Coast. La cultura locale, ricca di tradizioni Luau e danze Hula, completa un'esperienza unica che unisce avventura, storia e bellezza selvaggia.
+        <strong>🏝️ Hawaii: L'Aloha Spirit e le Isole Vulcaniche</strong> L'arcipelago delle Hawaii, il 50° stato degli USA, è la culla dell'Aloha Spirit. Queste isole vulcaniche sono un capolavoro della natura, dove si possono esplorare vulcani attivi e dormienti come il Kilauea, fare surf sulle onde leggendarie di Waikiki e percorrere sentieri escursionistici che si aprono su panorami costieri drammatici, come la Na Pali Coast. La cultura locale, ricca di tradizioni Luau e danze Hula, completa un'esperienza unica che unisce avventura, storia e bellezza selvaggia.
         <ul>
           <li><strong>🎾 Attività:</strong> trekking sui vulcani, surf, snorkeling, luau tradizionali</li>
           <li><strong>🍳 Cibo tipico:</strong> poke bowl, kalua pig, frutti tropicali come ananas e cocco</li>
@@ -48,3 +48,4 @@
 </body>
 
 </html>
+
