--- a/bali.html
+++ b/bali.html
@@ -33,6 +33,10 @@
           <li><strong>⭐ Luoghi iconici:</strong> Ubud, Tempio di Tanah Lot, Spiaggia di Seminyak</li>
         </ul>
     </div>
+    <div class="extra-links">
+        <a href="https://it.wikipedia.org/wiki/Bali" target="_blank" rel="noopener noreferrer">
+             ➡️ Pagina Wikipedia
+        </a>
         <a href="https://www.google.com/maps/place/Bali" target="_blank" rel="noopener noreferrer">
              📍 Posizione su Maps
         </a>
@@ -44,4 +48,5 @@
 </body>
 
 </html>
+
 
