--- a/caraibi.html
+++ b/caraibi.html
@@ -40,6 +40,10 @@
         <a href="https://www.google.com/maps/place/Caraibi" target="_blank" rel="noopener noreferrer">
              📍 Posizione su Maps
         </a>
+      </a>
+        <a href="https://www.booking.com/resorts/region/ag/caribbeanislands.it.html" target="_blank" rel="noopener noreferrer">
+             🏨 Prenota su Booking.com
+        </a>
     </div>
   </main>
   <footer>
@@ -48,3 +52,4 @@
 </body>
 
 </html>
+
