--- a/bali.html
+++ b/bali.html
@@ -40,6 +40,9 @@
         <a href="https://www.google.com/maps/place/Bali" target="_blank" rel="noopener noreferrer">
              📍 Posizione su Maps
         </a>
+      <a href="https://www.booking.com/region/id/bali.it.html" target="_blank" rel="noopener noreferrer">
+             🏨 Prenota su Booking.com
+        </a>
     </div>
   </main>
   <footer>
@@ -48,5 +51,6 @@
 </body>
 
 </html>
+
 
 
