--- a/thailandia.html
+++ b/thailandia.html
@@ -40,7 +40,9 @@
         <a href="https://www.google.com/maps/place/Thailandia" target="_blank" rel="noopener noreferrer">
              📍 Posizione su Maps
         </a>
-      https://www.booking.com/country/th.it.html
+      <a href="https://www.booking.com/country/th.it.html" target="_blank" rel="noopener noreferrer">
+             🏨 Prenota su Booking.com
+       </a>
     </div>
   </main>
   <footer>
@@ -49,5 +51,6 @@
 </body>
 
 </html>
+
 
 
